RESOLVED FIXED214656
[macOS] Datalist dropdown scrollbar position does not match visible region
https://bugs.webkit.org/show_bug.cgi?id=214656
Summary [macOS] Datalist dropdown scrollbar position does not match visible region
Aditya Keerthi
Reported 2020-07-22 14:37:09 PDT
Created attachment 404966 [details] Example SSIA
Attachments
Example (745.78 KB, video/quicktime)
2020-07-22 14:37 PDT, Aditya Keerthi
no flags
Patch (3.03 KB, patch)
2020-07-22 15:09 PDT, Aditya Keerthi
no flags
Fixed (953.04 KB, video/quicktime)
2020-07-22 15:11 PDT, Aditya Keerthi
no flags
Patch (4.17 KB, patch)
2020-07-22 15:56 PDT, Aditya Keerthi
no flags
Patch (4.42 KB, patch)
2020-07-23 09:06 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2020-07-22 15:09:15 PDT
Aditya Keerthi
Comment 2 2020-07-22 15:11:37 PDT
Tim Horton
Comment 3 2020-07-22 15:19:06 PDT
Comment on attachment 404977 [details] Patch Weird. Your new code is the obvious way to write it, I wonder why it was written the other way! We should make sure it looks right in shipping macOS as well as whatever you're testing on...
Aditya Keerthi
Comment 4 2020-07-22 15:56:20 PDT
Aditya Keerthi
Comment 5 2020-07-23 09:06:37 PDT
EWS
Comment 6 2020-07-23 12:46:16 PDT
Committed r264783: <https://trac.webkit.org/changeset/264783> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405044 [details].
Radar WebKit Bug Importer
Comment 7 2020-07-23 12:47:15 PDT
Note You need to log in before you can comment on or make changes to this bug.